--- a/Homework #3/css/style.css
+++ b/Homework #3/css/style.css
@@ -1,50 +1,104 @@
-*{
+*, body{
 	margin: 0px;
 	padding: 0px;
 }
 
-header{
-	background-color: #13803C;
+.wrapper{
+	max-width:1000px;
+	display:block;
+	margin:0 auto;
+	width: 96%;
+	padding:0px 2%;
 }
-li{
-	font-family: sans-serif;
-	color: white;
-	padding: 15px
+
+
+h1{
+	font-family: arial;
+	color: #13803C;
+	padding:10px 0px;
+	}
+
+h2{
+	font-family: arial;
+	padding: 5px 0px;
+}
+
+p{
+	font-family: arial;
+	padding: 5px 0px;
+}
+
+a{
+	color: #000
+}
+
+a:hover{
+	text-decoration: underline;
 
 }
-div.list{
-	font-family: sans-serif;
-	text-align: right;
-	padding: 30px;
+
+ul, ol{
+	margin-top:40px;
+	margin-left: 30px;
+	list-style: none;
 }
-h1{
-	font-family: sans-serif;
-	color: #13803C;
-	padding-top: 50px;
-	padding-bottom: 10px;
-	padding-left: 20px;
+
+ul li, ol li{
+	list-style: none;
+	display:inline-block;
+	padding:8px;
 }
-h3{
-	font-family: sans-serif;
-	padding-bottom: 10px;
-	padding-right: 10px;
-	padding-left: 20px;
-}
-p{
-	font-family: sans-serif;
-	padding-bottom: 10px;
-	padding-right: 10px;
-	padding-left: 20px;
-}
-img{
-	font-family: sans-serif;
-	padding-left: 20px;
-	padding-bottom: 30px;
-}
-footer{
-	font-family: sans-serif;
+
+
+header{
 	background-color: #13803C;
+	height: 75px;
+}
+
+header .logo{
+	float:left;
+	width:30%;
+}
+
+header .logo img{
+	display: block;
+	margin:0 auto;
+	width:100px;
+}
+
+header a{
+	color:#fff;
+	text-decoration: none;
+}
+
+header ul{
+	float:right;
+	width:30%;
+}
+
+.content{
+	padding:15px;
+	clear: both;
+}
+
+.content .main-content{
+	float:left;
+	width:60%;
+	margin-right:5%;
+}
+
+.content img{
+	float:right;
+	width:30%;
+	margin-top: 40px;
+}
+
+footer{
+	background-color: #13803C;
+	padding: 15px 0px;
+}
+
+footer p{
+	color:#fff;
 	text-align: center;
-	color: white;
-	padding: 30px;
 }
