--- a/Homework #4/css/style.css
+++ b/Homework #4/css/style.css
@@ -21,6 +21,8 @@ h1{
 h3{
 	font-family: arial, sans-serif;
 	padding: 5px 0px;
+	font-weight: bold;
+
 }
 
 p{
@@ -36,6 +38,15 @@ a:hover{
 	text-decoration: underline;
 	color: #5471B7;
 
+}
+
+body{
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#d0e4f7+0,73b1e7+24,0a77d5+50,539fe1+79,87bcea+100;Blue+Pipe+%231 */
+background: #d0e4f7; /* Old browsers */
+background: -moz-linear-gradient(top, #d0e4f7 0%, #73b1e7 24%, #0a77d5 50%, #539fe1 79%, #87bcea 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top, #d0e4f7 0%,#73b1e7 24%,#0a77d5 50%,#539fe1 79%,#87bcea 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom, #d0e4f7 0%,#73b1e7 24%,#0a77d5 50%,#539fe1 79%,#87bcea 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d0e4f7', endColorstr='#87bcea',GradientType=0 ); /* IE6-9 */
 }
 
 ul, ol{
@@ -102,4 +113,5 @@ footer{
 footer p{
 	color:#fff;
 	text-align: center;
+	font-weight: bold;
 }
