--- a/Homework #5/css/style.css
+++ b/Homework #5/css/style.css
@@ -51,13 +51,21 @@ header{
 
 header .logo{
 	float:left;
-	width:30%;
+	width:20%;
 }
 
 header .logo img{
 	display: block;
-	margin:0 auto;
+	float:right;
 	width:100px;
+}
+
+header h1 {
+	color:#fff;
+	font-size: 30px;
+	float:left;
+	margin-top: 40px;
+	margin-left: 15px;
 }
 
 header a{
@@ -82,7 +90,12 @@ header .wrapper .logo {
 		float:none;
 		padding-top: 10px;
 	}
+header h1 {
+	text-align: center;
+	float:none;
+	margin:0 auto;
 
+}
 	header .nav {
 		width: 100%;
 		text-align: center;
@@ -104,6 +117,13 @@ header .wrapper .logo {
 		margin:0 auto;
 		float:none;
 		padding-top: 10px;
+	}
+
+	header h1 {
+	text-align: center;
+	float:none;
+	margin:0 auto;
+
 	}
 	header .nav {
 		width: 100%;
@@ -130,6 +150,8 @@ button {
 	color: #fff;
 	border: 5px;
 	border-color: #D1D1D1;
+	box-shadow: 5px 5px 2px #999999;
+	border-radius: 2px;
 }
 input[type=search] {
 	width: 70%;
@@ -140,6 +162,7 @@ input[type=search] {
 	margin-bottom: auto;
 	box-shadow: 5px 5px 2px #999999;
 	font-size: 20px;
+	border-radius: 2px;
 
 }
 @media only screen and (max-width: 450px) {
@@ -148,37 +171,39 @@ input[type=search] {
 		margin-top: 100px;
 	}
 
-}
-.box-art {
+	}
+	.box-art {
 	padding: 300px 0px;
-}
+	}
 
-.box-art .row {
+	.box-art .row {
 	clear: both;
-}
+	}
 
-.box-art .row .block {
+	.box-art .row .block {
     float: left;
     margin-right: 3%;
     margin-top: 3%;
     padding: 0;
     width: 30%;
     box-shadow: 5px 5px 2px #999999;
-}
-.box-art .row .block img {
+
+	}
+	.box-art .row .block img {
     width: 100%;
+      border-radius: 2px;
 }
 
 @media screen and (max-width: 625px) {
-.box-art .row .block {
+	.box-art .row .block {
     margin-right: 4%;
     width: 45%;
-}
-}
+	}
+	}
 @media screen and (max-width: 400px) {
-.box-art .row .block {
+	.box-art .row .block {
     margin-right: 5%;
     margin-left: 5%;
     width: 90%;
-}
+	}
 }
