--- a/Homepage/css/forumstyle.css
+++ b/Homepage/css/forumstyle.css
@@ -4,6 +4,11 @@
 	font-family: 'Hind', sans-serif;
 }
 
+body{
+		background-color: #F2F2F2;
+}
+
+
 .wrapper{
 	max-width: 1200px;
 	display: block;
@@ -46,14 +51,14 @@ h5{
 	width: 100%;
 	float: left;
 	padding-top: 30px;
-	padding-left: 40px;
+	padding-left: 20px;
 }
 
 .section2 {
 	width: 100%;
 	float: left;
 	padding-top: 50px;
-	padding-left: 40px;
+	padding-left: 20px;
 }
 
 .card {
@@ -69,6 +74,7 @@ h5{
 	padding-bottom: 30px;
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
+    background-color: #ffffff;
 }
 
 a {
@@ -81,9 +87,37 @@ a {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
-@media screen and (max-width: 825px) {
+@media screen and (max-width: 850px) {
 	.card {
-		width: 40%;
-		margin-left: 6%;
+		width: 35%;
+		padding-top: 20px;
+		min-height: 85px;
+		
+	}
+
+}
+
+@media screen and (max-width: 750px) {
+	.card {
+		min-height: 120px;
 	}
 }
+
+@media screen and (max-width: 575px) {
+	.card {
+		min-height: 142px;
+	}
+	}
+
+	@media screen and (max-width: 500px) {
+	.card {
+		min-height: 165px;
+	}
+	}
+
+	@media screen and (max-width: 450px) {
+	.card {
+		width: 80%;
+		min-height: auto;
+	}
+	}
