--- a/Homepage/css/forumtopicstyle.css
+++ b/Homepage/css/forumtopicstyle.css
@@ -41,7 +41,7 @@ h5{
 
 .title {
 	float: left;
-	width:45%;
+	width:35%;
 	padding-top: 30px;
 	padding-left: 5%;
 
@@ -49,7 +49,7 @@ h5{
 
 .search {
 float: right;
-width: 50%;
+width: 60%;
 margin-top: 20px;
 margin-bottom: 30px;
 }
@@ -61,23 +61,86 @@ margin-bottom: 30px;
 	font-size: 20px;
 	border:2px solid #536FB5;
 	border-radius: 4px;
-	box-shadow: 5px 5px 4px #999999;
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.3);
+	margin-right: 5%;
 }
 
-.search button{
-	float: right;
+.search a{
+	float: left;
 	height: 50px;
-	width: 40%;
+	width: auto;
+	padding: 0 10px;
 	font-size: 18px;
-	border:2px solid #536FB5;
 	border-radius: 4px;
-	background-color: #C0C4F9; 
-	box-shadow: 5px 5px 4px #999999;
+	background-color: #ffffff; 
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.3);
+	text-decoration: none;
+	color: black;
+	transition: .5s;
+	text-align: center;
+	line-height: 50px;
+	margin-right: 30px;
 }
 
-.search button:hover{
-	background-color: #7C87FF;
-	box-shadow: 10px 7px 6px #999999;
+.search a:hover{
+
+	box-shadow: 0 6px 10px 0 rgba(0,0,0,0.4);
+}
+
+@media screen and (max-width: 950px) {
+
+	.title {
+	width:100%;
+	margin-top: 20px;
+}
+
+		.center{ 
+		clear: both;
+		width: 100%;
+		display: block;
+		text-align: center; 
+
+		}
+
+	 .search {
+	 	width: 95%;
+	 }
+
+	.search input {
+
+	}
+
+	.search a {
+ margin-right: 5%;
+	}
+
+	}
+
+	@media screen and (max-width: 620px) {
+
+		.search {
+			width: 100%;
+			display: inline-block;
+			text-align: center;
+		}
+		.searchbar {
+			width: 100%
+		}
+		.search .searchbar input {
+			width: 75%;
+			float: none;
+			display: block;
+			margin: 10px auto;
+
+		}
+
+		.search a {
+
+			float: none;
+			padding: 10px 15px;
+			margin-top: 10px;
+
+		}
 }
 
 .topictable{
@@ -121,3 +184,4 @@ color: black;
 .topictable td:nth-child(2), td:nth-child(3){
 	width: 30px;
 }
+
