--- a/Homepage/css/searchresultsstyle.css
+++ b/Homepage/css/searchresultsstyle.css
@@ -17,35 +17,35 @@ body{
 }
 
 h1{
-	color: #fff
+	color: #ffffff
 }
 
 .search {
-display: block;
-width: 100%;
+	display: block;
+	width: 100%;
 }
 
-.search .searchbar input{
-	display:block;
-	margin-top:250px;
-	margin-bottom: 20px;
-	margin-right: auto;
-	margin-left: auto;
-
+.center{
+	display: block;
+	margin: 0 ;
+}
+.search input{
+	clear: both;
+	display: inline-block;
+	float: left;
 	height: 50px;
-	width: 85%;
+	width: 75%;
 	font-size: 20px;
 	border:2px solid #536FB5;
 	border-radius: 4px;
 	box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.2);
+	margin-left: 75px;
 
 }
 
 .search a{
-	display: block;
+	display: inline-block;
 	margin-bottom: 30px;
-	margin-left: auto;
-	margin-right: auto;
 	height: 40px;
 	width: 90px;
 	font-size: 18px;
@@ -57,29 +57,16 @@ width: 100%;
 	text-decoration: none;
 	color: black;
 	line-height: 40px;
+	margin-left: 40px;
+	margin-top: 50px;
 }
 
-.topblock a {
-	float: left;
-	margin-bottom: 40px;
-	margin-left: 10px;
-	height: 35px;
-	width: 90px;
-	font-size: 18px;
-	border-radius: 4px;
-	background-color: #ffffff; 
-	box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.2);
-	transition: .5s;
-	text-align: center;
-	text-decoration: none;
-	color: black;
-	line-height: 35px;
-}
 
-.search a:hover, .topblock a:hover{
+.search a:hover{
 	box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.3);
 
 }
+
 .title {
 	clear: both;
 	color: black;
@@ -89,66 +76,6 @@ width: 100%;
 	padding-left: 5%;
 	padding-bottom: 10px;
 
-}
-
-
-.topblock {
-	display: inline-block;
-	float: right;
-	width: 45%;
-	margin-top:20px;
-	margin-bottom: 20px;
-	margin-left: auto;
-	margin-right: auto;
-
-}
-.topblock select { 
-	width: 100%;
-	font-size: 18px;
-	border:2px solid #ffffff;
-	border-radius: 4px;
-	background-color: #ffffff; 
-	box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.2);
-
-}
-
-@media screen and (max-width: 825px) {
-
-	.center{ 
-		width: 100%;
-		display: block;
-		text-align: center; 
-
-		}
-
-	.topblock {
-	clear: both;
-	display: inline-block;
-	width:auto;
-	float: none;
-	margin: 0;
-}
-
-.title {
-	width:100%;
-	margin-top: 20px;
-}
-
-
-
-}
-
-
-.topblock .filter1 {
-	float: left;
-	width:50px;
-	margin-right: 10px;
-	margin-top: 2px;
-}
-.topblock .filter2 {
-	float: left;
-	width: 200px;
-margin-top: 2px;
 }
 
 .grid {
@@ -208,4 +135,3 @@ text-decoration: none;
 color: #555555;
 font-weight: bold;
 }
-
