--- a/Homepage/css/tictactoestyle.css
+++ b/Homepage/css/tictactoestyle.css
@@ -44,7 +44,7 @@ h5{
 	height: 100px;
 	width: 100px;
 	border-radius: 50%;
-	background-color: #8DC63F;
+	background-color: #FF3535;
 	line-height: 100px;
 	text-align: center;
 	float: left;
@@ -59,15 +59,18 @@ h5{
 }
 
 .overviewfloater {
-	position: absolute;
+	position: relative;
 	height: 40px;
 	width: 150px;
-	top:-40px;
-	left:-60px;
 	border-radius: 25px;
-	background-color: #8DC63F;
+	background-color: #FF3535;
 	line-height: 40px;
 	text-align: center;
+	float: left;
+	margin-left: calc(66% - 100px);;
+	margin-top: -20px;
+	margin-right: -75px;
+	margin-bottom: -20px;
 	z-index:9;
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
@@ -86,7 +89,7 @@ h5{
 }
 
 .details {
-	position: relative;
+
 	float: right;
 	width: 32%;
 	margin-top: 25px;
@@ -94,6 +97,8 @@ h5{
 
 .overview img {
 	width:66%;
+
+
 }
 
 .overview ul {
@@ -125,7 +130,7 @@ h5{
 	height: 40px;
 	width: 150px;
 	border-radius: 25px;
-	background-color: #8DC63F;
+	background-color: #FF3535;
 	line-height: 40px;
 	text-align: center;
 	float: left;
@@ -163,7 +168,7 @@ h5{
 	height: 40px;
 	width: 150px;
 	border-radius: 25px;
-	background-color: #8DC63F;
+	background-color: #FF3535;
 	line-height: 40px;
 	text-align: center;
 	float: left;
@@ -175,6 +180,24 @@ h5{
 
 .files .info h4 {
 	padding: 10px 20px 0px 0px;
+}
+
+.files a:link {
+text-decoration: none;
+color: black;
+font-weight: bold;
+}
+
+.files a:hover {
+text-decoration: underline;
+color: black;
+font-weight: bold;
+}
+
+.files a:visited {
+text-decoration: none;
+color: black;
+
 }
 
 .videos {
@@ -197,7 +220,7 @@ h5{
 	height: 40px;
 	width: 150px;
 	border-radius: 25px;
-	background-color: #8DC63F;
+	background-color: #FF3535;
 	line-height: 40px;
 	text-align: center;
 	float: left;
@@ -227,33 +250,6 @@ text-align: center;
 }
 
 @media screen and (max-width: 750px) {
-	.overview img {
-	width:100%;
-
-	}
-
-	.box {
-		overflow: hidden;
-	}
-
-	.details {
-	
-	float: none;
-	width: 100%;
-	margin-top: 10px;
-	padding-left: 15px;
-	}
-
-	.overview ul {
-	list-style-type: circle;
-    float: left;
-	}
-
-	.overview ul li {
-	display: inline-block;
-	font-size: 20px;
-
-	}
 
 	.files {
 		width:85%;
@@ -263,11 +259,6 @@ text-align: center;
 	.videos {
 		clear: both;
 		width:90%;
-	}
-
-	.overviewfloater{
-		left:-25px;
-		top:-40px;
 	}
 
 	.descriptionfloater {
